# _lattice_lock_framework

./: .env.example  .gitignore  .gitignore_documentation.md  .pre-commit-config.yaml  ANALYSIS_REPORT.md  CHANGELOG.md  CLAUDE.md  CODE QUALITY ANALYSIS REPORT.md  CONTRIBUTING.md  CREDENTIALS_SETUP.md  Code Gap Inventory.md  DEPLOYMENT.md  DEPRECATIONS.md  DEPRECATION_NOTICE.md  Dockerfile  ERD - Lattice Lock Data Model.md  ERROR_CODES.md  LATTICE_LOCK_SPECIFICATION.md  LATTICE_YAML_README.md  LICENSE.md  Lattice Lock Data Strategy v1.1.md  Lattice Lock Framework - Master Refactoring Plan (v5.1 Final).md  Lattice Lock Refactoring Instructions for Claude Code, Devin.ai, and Gemini 3.md  MODELS.md  MODEL_CONFIGURATION_UPDATE.md  Makefile  PROJECT_INDEX.md  PROJECT_STATE_AUDIT_REPORT.md  PR_GROUP_A_CI_Test_Infrastructure.md  PR_GROUP_B_CLI_Consolidation.md  PR_GROUP_C_Security_Utilities.md  PR_GROUP_D_Documentation_Fixes.md  PR_GROUP_E_Code_Hygiene.md  PR_GROUP_F_Security_Hardening.md  PR_GROUP_H_GitHub_Integration.md  README.md  ROADMAP.md  SECURITY.md  USER_FACING_FILE_MAP.md  Untitled.md  (+14 more)
.githooks/: pre-push
.github/: CODEOWNERS  dependabot.yml  labels.md  naming_standards.md  pull_request_template.md
.github/workflows/: README.md  check-untracked.yml  ci.yml  deploy-gcp.yml  docker-publish.yml  pylint.yml  python-app.yml  release.yml  reusable-full-check.yml  reusable-gauntlet.yml  reusable-sheriff.yml  reusable-validate.yml  snyk-security.yml  testing-program.yml
.mcp/: .env.example  GITHUB_AUTH_SETUP.md  README.md  check_no_secrets.sh  install.sh
.mcp/config/: mcp_servers.json
.mcp/templates/: cursor-mcp.json  warp-mcp.json
.obsidian/: appearance.json
.serena/: project.yml
agent_definitions/: AGENTS_INVENTORY.md  AGENT_DEFINITIONS_CRITIQUE.md
agent_definitions/agents_glossary/: agent_glossary.md
agent_definitions/model_orchestration_agent/: model_orchestration_agent.yaml
agent_definitions/prompt_architect_agent/: prompt_architect_agent.yaml
agent_memory/: universal_memory_directive.md
agent_memory/agents/: agent_prompt_architect_memory.md
agents/: .gitignore  .gitignore.suggestion  AGENT_LINTING_PROMPT.md  EXTENDING.md  FIX_PLAN.md  Index - Lattice Lock Framework Agents.md  Makefile  PROJECT_INDEX.json  PROJECT_INDEX.md  QUICKSTART.md  SYNC_README.md  SYSTEM_OVERVIEW.md  fix_agents.py  metrics_calibration.md  prepare_for_linting.py  requirements.txt  sync_agents_to_claude.py  validate_agents.py  watch_and_sync.py
agents/agent_definitions/: AGENT_TAXONOMY.md
agents/agent_diagrams/: diagrams_handoff_protocol.md  (+2 more)
cli_commands/: cli_orchestrator.md
credentials/: README.md
developer_documentation/: PHASE_1_2_BREAKPOINT_STATUS.md
diagrams/: Diagram, Sequence - Database Infrastructure (AWS to GCP).md
docs/: AGENTS.md  AUDIT_REPORT.md  CLAUDE.md  CONTRIBUTING.md  DEPRECATIONS.md  DIRECTORY_STRUCTURE_MAP.md  ERROR_CODES.md  FEATURES.md  USER_FACING_FILE_MAP.md  contributing.md  index.md  migration_map.md
docs/advanced/: README.md  (+7 more)
examples/: lattice.yaml
frontend/: package-lock.json  package.json  test_output.txt  vitest.config.js
implementation/: PHASE_1_2_BREAKPOINT_STATUS.md  implementation_summary.md
infrastructure/: Diagram, Sequence - Database Infrastructure (AWS to GCP).md
models/: MODEL_USAGE_GUIDE.md  grok-models-config.yaml  local_models_setup_guide.md  model_commands.sh  model_selection_guidelines.md  ollama_list.md  registry.yaml
money_automation/: README.md  lattice.yaml
project-management/: AUDIT_REPORT.md  Automated Diagram Generation & Maintenance System.md  Lattice Lock Framework - Master Refactoring Plan (v5.2 Final).md  Review - Lattice Lock Framework - Master Refactoring Plan (v5.2 Final).md
project_management/: ideas_features.md  next_session_plan.md  pal-mcp-gap-remediation-plan.md  test_plan_steps.md
project_prompts/: project_prompts_state.json  project_prompts_tracker.md  work_breakdown_structure.md
review/: CICD_PLAN.md  CLEANUP_PLAN.md  CODE_CHANGES_BACKLOG.md  DATABASE_PLAN.md  DEPENDENCY_PLAN.md  DETAILED_FINDINGS.md  DOCUMENTATION_PLAN.md  EXECUTIVE_SUMMARY.md  FRONTEND_PLAN.md  ISSUE_BACKLOG.md  LLM_INTEGRATION_PLAN.md  REVIEW_COMPLETE.md  TECH_STACK_INVENTORY.md  TOOLING_PLAN.md
scripts/: __init__.py  agent_prompts.py  audit_docs.py  c1_scaffold_impl.py  c2_docs_impl.py  c3_tracker_impl.py  c5_ci_impl.py  c6_admin_impl.py  c7_sheriff_impl.py  c8_gauntlet_impl.py  c_3_4_dashboard.py  c_4_2_tutorial.py  c_4_4_feedback.py  c_7_3_telemetry.py  claude_code_agent.py  compile_lattice.py  coverage.json  d_4_3_pilot.py  d_5_3_prompt_engine.py  d_6_1_4_bedrock.py  d_6_3_2_registry.py  d_6_3_4_cost.py  d_6_3_6_consensus.py  d_6_3_8_analyzer.py  d_6_4_4_hardening.py  d_7_2_caching.py  d_7_5_hardening.py  devin_agent.py  gemini_antimatter_agent.py  gemini_cli_agent.py  generate_prod_keys.sh  install-deps.ps1  lock_deps.py  multiagent_orchestration_scripts.md  orchestrator_cli.py  prompt_tracker.py  run-ci.ps1  run-tests.ps1  run_e2e_300.py  setup-env.ps1  (+12 more)
specifications/: lattice_lock_framework_specifications.md
src/: __init__.py  compile.py  types.py
tests/: conftest.py  e2e_report.xml  multi_turn_example.py  test_admin_api.py  test_admin_auth.py  test_agent_validator.py  test_api_refactor.py  test_aws_templates.py  test_bedrock_implementation.py  test_ci_templates.py  test_cli_core.py  test_cli_doctor.py  test_cli_init.py  test_cli_ux.py  test_cli_validate.py  test_compile_lattice.py  test_configurable_registry.py  test_cost_tracker.py  test_dashboard_backend.py  test_deprecation_warnings.py  test_env_validator.py  test_error_classification.py  test_error_middleware.py  test_feedback.py  test_function_calling.py  test_gauntlet_ci.py  test_gauntlet_cli.py  test_gauntlet_generator.py  test_gcp_templates.py  test_github_actions_templates.py  test_governance_core.py  test_lattice_examples.py  test_model_capabilities.py  test_model_registry.py  test_model_registry_loading.py  test_orchestrator.py  test_orchestrator_config.py  test_package_import.py  test_precommit_integration.py  test_project_agent_client.py  (+23 more)
(+2774 files in other folders)
