[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lattice-lock"
version = "2.1.0"
description = "A governance-first framework for AI-assisted software development with intelligent model orchestration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Lattice Lock Team"}
]
keywords = [
    "ai",
    "llm",
    "orchestration",
    "model-routing",
    "governance",
    "code-generation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "rich>=13.0.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]
all = [
    "uvloop>=0.19.0; platform_system != 'Windows'",
]

[project.urls]
Homepage = "https://github.com/klappe-pm/lattice-lock-framework"
Repository = "https://github.com/klappe-pm/lattice-lock-framework"

[project.scripts]
lattice-lock = "lattice_lock_cli.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
