[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lattice-lock"
version = "2.1.0"
description = "A governance-first framework for AI-assisted software development with intelligent model orchestration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Lattice Lock Team"}
]
keywords = [
    "ai",
    "llm",
    "orchestration",
    "model-routing",
    "governance",
    "code-generation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "rich>=13.0.0",
    "tenacity>=8.2.0",
    "Jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.5.0",
    "pylint>=3.0.0",
    "mypy>=1.0.0",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.31.0",
    "types-aiofiles>=23.0.0",
]
all = [
    "uvloop>=0.19.0; platform_system != 'Windows'",
]

[project.urls]
Homepage = "https://github.com/klappe-pm/lattice-lock-framework"
Repository = "https://github.com/klappe-pm/lattice-lock-framework"

[project.scripts]
lattice-lock = "lattice_lock_cli.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = [
    "pilot_projects",
    "scripts/tests",
    "examples",
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.venv
    | venv
    | __pycache__
    | \.pytest_cache
    | build
    | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
skip = [".git", ".venv", "venv", "__pycache__", ".pytest_cache", "build", "dist"]
known_first_party = ["lattice_lock", "lattice_lock_orchestrator", "lattice_lock_cli", "lattice_lock_validator"]

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".pytest_cache",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "ARG001", # unused function argument (common in frameworks)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001", "S101"]  # Allow assert and unused args in tests
"scripts/*" = ["ARG001"]

# Pylint configuration
[tool.pylint.main]
ignore = [".git", ".venv", "venv", "__pycache__", ".pytest_cache", "build", "dist"]
ignore-patterns = ["test_.*\\.py"]

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring (we'll add these in A4)
    "C0115",  # missing-class-docstring (we'll add these in A4)
    "C0116",  # missing-function-docstring (we'll add these in A4)
    "R0903",  # too-few-public-methods
    "W1203",  # logging-fstring-interpolation
]

[tool.pylint.format]
max-line-length = 100
